--- a/VRChat/75/1106775.html
+++ b/VRChat/75/1106775.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "EsX9YSOLLzuKc3Lq5HmbLUgnvyE+m/8Jw22PUhOcg/c="></script>
+    "wXVvn/B3QgEZ+4OBY26vd3lxnPOlQlRwxDvv4dUta4o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat - Sign","description":"Low-Poly Simple Sign\nFormat:  FBX, UnityPackage\nVerts:   42\nFaces:   31\nTris:    61\nObjects: 7\n\nInner Face on both side can be individually \n","url":"https://booth.pm/ja/items/1106775","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/86ab5bf0-9e84-4b83-96b6-e39d13a21494/i/1106775/33d84000-3364-46fb-9e44-9c8a3ae9f5dd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EsX9YSOLLzuKc3Lq5HmbLUgnvyE+m/8Jw22PUhOcg/c="></script>
+    nonce="wXVvn/B3QgEZ+4OBY26vd3lxnPOlQlRwxDvv4dUta4o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1106775/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               131
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1106775/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               131
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
