--- a/VRChat/53/1106453.html
+++ b/VRChat/53/1106453.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZQMZ6UFlNGq66jj99S6vi6EBkhAJgHAEcV+M7/ckw2Y="></script>
+    "GW4s3bvxj2vNgX97/U9Li8u+zhUPxRzFsSIa/XG+7As="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Toy Snake","description":" Bones: 8\n Verts: 3690\n  Face: 3754\n  Tris: 7368\nFormat: FBX\n","url":"https://booth.pm/ja/items/1106453","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/86ab5bf0-9e84-4b83-96b6-e39d13a21494/i/1106453/fd3f93fb-52f1-4c52-a7b2-09d93fcde2bc_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZQMZ6UFlNGq66jj99S6vi6EBkhAJgHAEcV+M7/ckw2Y="></script>
+    nonce="GW4s3bvxj2vNgX97/U9Li8u+zhUPxRzFsSIa/XG+7As="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1106453/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1106453/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
