--- a/VRChat/01/1100501.html
+++ b/VRChat/01/1100501.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ypL5opxRjoEmwH4sZxVVJ2GzMcoDg4lbNkea/6P9NBQ="></script>
+    "m9NwvuVWNNcRf9ayF7WNqZ/xq250051wBUeIJtjIsBk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"麻雀牌（字牌セット）","description":"麻雀牌の字牌（東・南・西・北・白・發・中）です。\n\nVRChatなどでの使用を想定しています。前回の「北」の問題点をいくつか改善しています。各牌の違いは、基本的にはテクスチャを貼り替えただけです。\nシェーダーによっては暗めに見えるかもしれません。\n\nポリゴン数：各60\n\n商用・私的利用など自由にご利用ください。\n\n牌画像は麻雀豆腐様のものを使用しています。\nhttps://majandofu.com/mahjong-images","url":"https://booth.pm/ja/items/1100501","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9a05bd42-3027-4d3a-8df6-055a7ed44526/i/1100501/708990ef-ef7d-4995-922b-821ac43ae5c2_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ypL5opxRjoEmwH4sZxVVJ2GzMcoDg4lbNkea/6P9NBQ="></script>
+    nonce="m9NwvuVWNNcRf9ayF7WNqZ/xq250051wBUeIJtjIsBk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1100501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1100501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
