--- a/VRChat/65/1100165.html
+++ b/VRChat/65/1100165.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DUHRSqVV9vML0wTdyyOiebA6q0yUK7HLBt4ke9MLhfc="></script>
+    "9RRe3Vgd15XU46XenogesHv+I62ycluoeqqRVrl1Obs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[Cubeds-Unity-Shaders] FlatLitToonReversible","description":"①「Cubeds-Unity-Shaders」をImport\n②「FlatLitToonReversible」をImport\n③「FlatLitToonReversible」の中のファイルを「Cubeds-Unity-Shaders」に入れる。\n　※フォルダ名と階層が同じなので同じ場所に入れてください。\n④移動したファイルを選択し、Inspectorで見てエラーが出ていたら、右クリックでreimportを選択。\n\nあとは他のShaderと同じように利用できます。","url":"https://booth.pm/ja/items/1100165","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e7b87c36-9f3a-4f4c-90ee-32cdd490dac6/i/1100165/22f7e097-3388-4101-a698-a5c965663223_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DUHRSqVV9vML0wTdyyOiebA6q0yUK7HLBt4ke9MLhfc="></script>
+    nonce="9RRe3Vgd15XU46XenogesHv+I62ycluoeqqRVrl1Obs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1100165/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               189
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1100165/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               189
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
